kubernetes/apps/invoiceninja/invoiceninja/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: invoiceninja-client
  namespace: invoiceninja
  annotations:
    monitoring.webgrip.io/synthetic-check: blackbox-invoiceninja
spec:
  hostnames:
    - invoice.webgrip.dev
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Port
                value: "443"
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: invoiceninja
          namespace: invoiceninja
          port: 80
